tests/negative/null_char_concat.far
fun main() {
  s = "a" + char(0) + "b"
  return 0
}
